@@ -116,7 +116,7 @@
 			{$receipt.value|money_format} 
 		</TD>
 		<TD WIDTH="95%">
-			<A HREF="?m=customerinfo&id={$receipt.customerid}">{$receipt.name}, {$receipt.address}, {$receipt.zip} {$receipt.city}</A>
+			<A HREF="?m=customerinfo&id={$receipt.customerid}">{$receipt.customer}, {$receipt.address}, {$receipt.zip} {$receipt.city}</A>
 		</TD>
 		<TD WIDTH="1%" ALIGN="RIGHT" CLASS="fright" NOWRAP>
 			<A HREF="?m=receipt&id={$receipt.id}" TARGET="_blank"><IMG src="img/print.gif" alt="[ {t}Print{/t} ]"></A>
