@@ -60,6 +60,7 @@ version 1.7.1 Swarog (??/??/????):
     automatic identification of massive payments (lexx)
   - added 'assign' argument for _smarty_function_sum() (alec)
   - added dberrors displaying on login form (alec)
+  - Cash Receipts (in Poland known as "druki KP") (alec)
     
 version 1.7.0 Klorel (13/05/2005):
 
